--- a/.ebextensions/php.config
+++ b/.ebextensions/php.config
@@ -1,4 +1,3 @@
-option_settings:
-  aws:elasticbeanstalk:container:php:phpini:
-    document_root: /
-
+container_commands:
+  01_fix_permissions:
+    command: "chmod -R 755 /var/app/current"
