--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -64,7 +64,7 @@ jobs:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           application_name: phpapp
-          environment_name: phpapp-env
+          environment_name: Php-app-env
           region: us-east-1
           version_label: ${{ github.run_id }}
           deployment_package: deploy.zip
